--- a/nft-template/package.json
+++ b/nft-template/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.9.2",
     "next": "^15.2.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
