--- a/connecting-contract/package.json
+++ b/connecting-contract/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "5.0.2",
+    "axios": "^1.9.0",
     "ethers": "^6.0.0",
     "framer-motion": "^12.9.2",
+    "ipfs-http-client": "^60.0.1",
     "next": "^15.2.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
