--- a/connecting-contract/package.json
+++ b/connecting-contract/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^12.9.2",
     "ipfs-http-client": "^60.0.1",
     "next": "^15.2.4",
+    "pinata": "^2.2.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
