--- a/nft-template/package.json
+++ b/nft-template/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "framer-motion": "^12.9.2",
+    "ipfs-http-client": "^60.0.1",
     "next": "^15.2.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
