--- a/docs/blog/tags.yml
+++ b/docs/blog/tags.yml
@@ -17,3 +17,8 @@ hola:
   label: Hola
   permalink: /hola
   description: Hola tag description
+
+nft:
+  label: nft
+  permalink: /nft
+  description: NFT tag description
