--- a/docs/blog/authors.yml
+++ b/docs/blog/authors.yml
@@ -1,23 +1,18 @@
-yangshun:
-  name: Yangshun Tay
-  title: Front End Engineer @ Facebook
-  url: https://github.com/yangshun
-  image_url: https://github.com/yangshun.png
+mossimka:
+  name: Maxim Sarsekeyev
+  title: Sofware Engineer
+  url: https://github.com/mossimka
   page: true
   socials:
-    x: yangshunz
-    github: yangshun
+    instagram: mossimka
+    github: mossimka
+    telegram: mossimka
 
-slorber:
-  name: Sébastien Lorber
-  title: Docusaurus maintainer
-  url: https://sebastienlorber.com
-  image_url: https://github.com/slorber.png
-  page:
-    # customize the url of the author page at /blog/authors/<permalink>
-    permalink: '/all-sebastien-lorber-articles'
+ranzai:
+  name: Makymov Alikhan
+  title: Sofware Engineer
+  url: https://github.com/ranzai32
+  page: true
   socials:
-    x: sebastienlorber
-    linkedin: sebastienlorber
-    github: slorber
-    newsletter: https://thisweekinreact.com
+    github: ranzai32
+    telegram: makymovv15
