--- a/docs/blog/tags.yml
+++ b/docs/blog/tags.yml
@@ -58,7 +58,7 @@ front:
   permalink: /front
   description: Front tag
 
-front:
+theme:
   label: theme
   permalink: /theme
   description: Theme tag
